# causal_inference

./: .claudeignore  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  PROGRAM.md  README.md  RESULTS.md  environment.yml  main.py  pyproject.toml  run_model.sh  setupAnacondaVENV.sh
grn_inference/: __init__.py  data_loaders.py  dataset.py  evaluator.py  models.py
grn_inference/diff_cov/: __init__.py  model.py
grn_inference/dominator_tree/: README.md  __init__.py  model.py
grn_inference/dt_tr_ensemble/: README.md  __init__.py  model.py
grn_inference/ensemble_scm/: README.md  __init__.py  fit.py  loss.py  model.py  simulator.py
grn_inference/indirect_pruning/: README.md  __init__.py  model.py
grn_inference/invariance_icp/: __init__.py  model.py
grn_inference/likelihood_mle/: __init__.py  model.py
grn_inference/neighborhood_regression/: __init__.py  model.py
grn_inference/path_inversion/: __init__.py  model.py
scripts/: build_filtered_refs.py  diagnose_divergence.py  eval_partial_perturbation.py  max_w1_oracle.py  run_arboreto_baselines.py  run_baseline.py  run_candidate_comparison.py  run_causalbench_eval.py  run_scm_fit.py  seven_gene_benchmark.py  sweep_l1.py  sweep_optimization_hparams.py  sweep_spectral_threshold.py  tiny_graph_test.py
src/: DataSaverModel.py  MeanDifference.py  README_Claude.md  RandomModel.py
tests/: test_diff_cov.py  test_dominator_tree.py  test_invariance_icp.py  test_neighborhood_regression.py  test_path_inversion.py  test_rank_aggregation.py  test_scm_fitter.py  test_shift_corr.py  test_stage0.py
(+13 files in other folders)
